--- a/README
+++ b/README
@@ -1,5 +1,8 @@
-# v-editor
+v editor
+---------
+
 Source code development and navigation tool
+
 Steps for intallation:
 ----------------------
 1. Copy the vinstall file to your home directory
